# roots

./: .gitignore  LICENSE  compose.yml  pyproject.toml  ruff.toml
app/: main.py
app/core/: settings.py
